feat(86): manage crawling cursor in dam plugins